Fix mermaid diagram is not visiable when export html (#1732)
* Fix mermaid diagram is not visiable when export html

* make the print render container off screen

--- a/src/renderer/assets/styles/printService.css
+++ b/src/renderer/assets/styles/printService.css
@@ -1,4 +1,8 @@
-body .ag-render-container,
+body .ag-render-container {
+  left: -10000px;
+  right: -10000px;
+}
+
 body article.print-container {
   display: none;
 }
